--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
-[submodule "themes/m10c"]
+[submodule "themes/strange-case"]
 	path = themes/strange-case
+	url = https://github.com/ExchangeRate-API/strange-case.git
+[submodule "strange-case"]
+	path = strange-case
 	url = https://github.com/ExchangeRate-API/strange-case.git
